API ChangeLog	(see the ChangeLog in each 'apps' directory for
		app specific changes

23-Mar-2001	Joachim Ansorg <jansorg@gmx.de>
	Made some changes to the API documentation in the headers
		(documented new classes).

11-Mar-2001     Troy A. Griffitts <scribe@crosswire.org>
	Added multimapwithdefault template and changed swconfig to use
	Added operator [] to SWConfig
	Added configtest

25-Feb-2001     Chris Little <chirslit@crosswire.org>
	Added roman.c for Roman Numeral conversion and made GBF to ThML
        filter produce XML compliant text

09-Feb-2001	Joachim Ansorg <jansorg@gmx.de>
	Added beginnings of API documentation in doc/api-documemtation.
        Formats are HTML and man

08-Feb-2001     Chris Little <chrislit@crosswire.org>
	Added embedded Visual C++ project to build DLL in
        apps/windoze/wince/sword but it requires undistributable
        libraries to build it currently.  MIPS, SH3, and ARM processors
        are supported.

08-Feb-2001     Chris Little <chrislit@crosswire.org>
	Added Visual C++ 6.0 project to build DLL in apps/windoze/vc/Sword

18-Jan-2001	Joachim Ansorg <jansorg@gmx.de>
	RawText::Search: Do not check for a valid key if we don't use a
		scope, this speeds up the normal search of indexed modules
		(IMHO a lot for large result sets)
	Updated examples/cmdline/threaded_search.cpp

14-Jan-2001	Joachim Ansorg <jansorg@gmx.de>
	Updated sk.conf

13-Jan-2001	Chris Little <chrislit@crosswire.org>
	Added arg to vpl2mod to work with NT-only translations

30-Dec-2000	Chris Little <chrislit@crosswire.org>
	Fixed prn2sword so that it should work with new OLBs

22-Dec-2000	Troy A. Griffitts <scribe@crosswire.org>
	Added 'micros' a mini GUI for PDAs

20-Dec-2000	Troy A. Griffitts <scribe@crosswire.org>
    Added new compile target architecture: arm
    Changed the simple lookup cmdline example to work with any
        module.  Tested on iPaq SA1110.  Need to optimize
        size/speed!

15-Dec-2000	Troy A. Griffitts <scribe@crosswire.org>